# blog-rs

./: .gitignore  README.md
README/: image-20240105022600845-17047066732326-170470667323411.png:Zone.Identifier  image-20240105022636714-17047066732337-170470667323512.png:Zone.Identifier  image-20240105031717674-17047066732338-170470667323513.png:Zone.Identifier  image-20240105230402797-17047066732339-170470667323514.png:Zone.Identifier  image-20240108173513334-170470667323310-170470667323515.png:Zone.Identifier
client/: Caddyfile  Cargo.toml  Trunk.toml  index.html
client/src/: app.rs  constants.rs  fetch.rs  main.rs  utils.rs
client/src/components/: card.rs  container.rs  home.rs  markdown_editor.rs  mod.rs  modal.rs  not_found.rs
client/src/components/article/: article_preview.rs  article_viewer.rs  articles.rs  delete.rs  edit.rs  mod.rs  new.rs  view.rs
client/src/components/comment/: delete.rs  new.rs  view.rs
client/src/components/user/: login.rs  mod.rs  oauth.rs
client/src/models/: article.rs  comment.rs  user.rs
server/: .env  Cargo.toml  test.html
server/src/: constants.rs  errors.rs  main.rs
server/src/article/: delete.rs  edit.rs  mod.rs  new.rs  search.rs  view.rs
server/src/comment/: delete.rs  new.rs  view.rs
server/src/models/: comment.rs  user.rs
server/src/modles/: article.rs  user.rs
server/src/user/: info.rs  login.rs
