[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20.0", features = ["csr"]}
# 将rust和js的浏览器abi进行了一些绑定，从而使我们可以在rust中调用js的abi。
# Windows是指浏览器的Window对象，而不是平常说的Windows，mac，Linux操作系统
web-sys = {version = "0.3.60", features=["Window","Document"]}
yew-router = "0.17.0"