[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
ntex = { version = "0.7.16", features = ["cookie", "tokio", "rustls"] }
# 日期转json
chrono = {version = "0.4.23", features = ["serde"]}
# .env
dotenvy = "0.15.6"
# 可以序列化和反序列化
serde = {version="1.0.152", features=["derive"]}
serde_json = "1.0.91"
sqlx = {version="0.6.2", features=[
    "runtime-tokio-rustls", # 加密支持
    "postgres", # 数据库
    "macros", # 开启宏特性
    "chrono", # 提供日期时间支持
]}